# GenUT

./: .gitignore  .mcp.json  AUTO_UT_SCENARIOS.md  CLAUDE.md  LICENSE  MCP_SKILL_README.md  README.md  README_en.md  __init__.py  analyzer.py  builder.py  extractor.py  gen_ut.py  mcp_server.py  requirements.txt  run_mcp_server.bat  run_mcp_server.sh
.claude/commands/: genut.md
.claude/skills/genut/: SKILL.md
genut/: analyzer.py  builder.py  compdb.py  config.py  extractor.py  models.py  stub_builder.py  stub_framework.py
test_c_project/: CMakeLists.txt  README.md  build.ps1  build.sh  build_test.ps1  build_test.sh  测试C函数场景.md
test_c_project/include/: basic_functions.h  control_flow.h  data_processor.h  dep_helpers.h  error_handling.h  func_ptr_test.h  global_ptr_test.h  math_utils.h  memory_management.h  nested_struct_test.h  param_combo.h  sensor.h  state_machine.h  stub_dependency.h  stub_framework.h  stub_test.h
test_c_project/src/: basic_functions.c  control_flow.c  data_processor.c  dep_helpers.c  error_handling.c  func_ptr_test.c  global_ptr_test.c  main.c  math_utils.c  memory_management.c  nested_struct_test.c  param_combo.c  sensor.c  state_machine.c  stub_dependency.c  stub_test.c
tools/: analyze_func_ptr.py  test_array_type.py  test_type.py
